; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/t/extr_..libopenssl.c_x9_62_decode_point.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/t/extr_..libopenssl.c_x9_62_decode_point.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i64, i32*)* @x9_62_decode_point to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @x9_62_decode_point(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = bitcast %struct.TYPE_3__* %5 to i64*
  store i64 %1, i64* %9, align 4
  store i32* %0, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* null, i32** %8, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call i32* @EC_POINT_new(i32* %10)
  store i32* %11, i32** %8, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %29

14:                                               ; preds = %3
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %7, align 8
  %22 = call i32 @EC_POINT_oct2point(i32* %15, i32* %16, i32 %18, i32 %20, i32* %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %27, label %24

24:                                               ; preds = %14
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @EC_POINT_free(i32* %25)
  store i32* null, i32** %4, align 8
  br label %29

27:                                               ; preds = %14
  %28 = load i32*, i32** %8, align 8
  store i32* %28, i32** %4, align 8
  br label %29

29:                                               ; preds = %27, %24, %13
  %30 = load i32*, i32** %4, align 8
  ret i32* %30
}

declare dso_local i32* @EC_POINT_new(i32*) #1

declare dso_local i32 @EC_POINT_oct2point(i32*, i32*, i32, i32, i32*) #1

declare dso_local i32 @EC_POINT_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
